grammar.js
        source_file: $ => seq(
            repeat($._source_unit),
        ),

        //  -- [ Source Element ] --
        _source_unit: $ =>  choice(
            $._directive,
            $._declaration,
        ),

        //  -- [ Directives ] --
        contract_declaration: $ => seq(
            optional('abstract'),
            'contract',
            field("name", $.identifier),
            optional($._class_heritage),
            field('body', $.contract_body),
        ),

        _class_heritage: $ => seq(
            "is",
            commaSep1($.inheritance_specifier)
        ),

        contract_body: $  => seq(
            "{",
            repeat($._contract_member),
            "}",
        ),

        _contract_member: $ => choice(
            $.function_definition,
            $.modifier_definition,
            $.error_declaration,
            $.state_variable_declaration,
            $.struct_declaration,
            $.enum_declaration,
            $.event_definition,
            $.using_directive,
            $.constructor_definition,
            $.fallback_receive_definition,
            $.user_defined_type_definition,
        ),

        statement: $ => choice(
            $.block_statement,
            $.expression_statement,
            $.variable_declaration_statement,
            $.if_statement,
            $.for_statement,
            $.while_statement,
            $.do_while_statement,
            $.continue_statement,
            $.break_statement,
            $.try_statement,
            $.return_statement,
            $.emit_statement,
            $.assembly_statement,
            $.revert_statement,
        ),

        variable_declaration_statement: $ => prec(1,seq(
                choice(
                    seq($.variable_declaration, optional(seq('=', field("value", $.expression)))),
                    seq($.variable_declaration_tuple, '=', field("value", $.expression)),
                ),
                $._semicolon
        )),

        variable_declaration: $ => seq(
            field("type", $.type_name),
            field("location", optional($._storage_location)),
            field('name', $.identifier)
        ),

        expression_statement: $ => seq($.expression, $._semicolon),

        function_definition: $ => seq(
            "function",
            field("name", $.identifier),
            $._parameter_list,
            repeat(choice(
                $.modifier_invocation,
                $.visibility,
                $.state_mutability,
                $.virtual,
                $.override_specifier,
            )),
            field("return_type", optional($.return_type_definition)),
            choice($._semicolon, field('body', $.function_body))
        ),

        _call_arguments: $ => prec(4,
            seq(
                '(',
                commaSep($.call_argument),
                ')'
            ),
        ),

        call_argument: $ => choice(
            $.expression,
            seq("{", commaSep($.call_struct_argument), "}"),
        ),
        call_struct_argument: $ => seq(
            field("name", $.identifier),
            ":",
            field("value", $.expression)
        ),

        function_body: $ => seq(
            "{",
                repeat($.statement),
            "}",
        ),

        // Expressions
        expression: $ => choice(
            $.binary_expression,
            $.unary_expression,
            $.update_expression,
            $.call_expression,
            $.payable_conversion_expression,
            $.meta_type_expression,
            $._primary_expression,
            $.struct_expression,
            $.ternary_expression,
            $.type_cast_expression,
        ),

        _primary_expression: $ => choice(
            $.parenthesized_expression,
            $.member_expression,
            $.array_access,
            $.slice_access,
            $.primitive_type,
            $.assignment_expression,
            $.augmented_assignment_expression,
            $.user_defined_type,
            $.tuple_expression,
            $.inline_array_expression,
            $.identifier,
            $._literal,
            $.new_expression,
        ),

        // Type cast expressions in Solidity (e.g., uint256(x), address(y))
        type_cast_expression: $ => prec.left(seq($.primitive_type,  $._call_arguments)),

        ternary_expression: $ => prec.left(seq($.expression, "?", $.expression, ':', $.expression)),

        // New expression for contract creation (e.g., new Contract(), new Contract{salt: 0x123}())
        new_expression: $ => prec.left(choice(
            // New without options
            seq(
                'new', 
                field("name", $.type_name),
                optional($._call_arguments)
            ),
            // New with options (higher precedence)
            prec(1, seq(
                'new', 
                field("name", $.type_name),
                "{",
                commaSep1($.call_option),
                "}",
                optional($._call_arguments)
            ))
        )),

        tuple_expression: $ => prec(1, seq('(', commaSep(optional($.expression)), ')' )),

        inline_array_expression: $ => seq('[', commaSep($.expression), ']' ),

        binary_expression: $ => choice(
            ...[
            // [13] Logical OR
            ['||', PREC.LOGICAL_OR],
            // [12] Logical AND
            ['&&', PREC.LOGICAL_AND],
            // [11] Equality operators
            ['==', PREC.REL_EQ],
            ['!=', PREC.REL_EQ],
            // [10] Inequality operators
            ['<', PREC.REL_INEQ],
            ['>', PREC.REL_INEQ],
            ['<=', PREC.REL_INEQ],
            ['>=', PREC.REL_INEQ],
            // [9] Bitwise OR
            ['|', PREC.BITWISE_OR],
            // [8] Bitwise XOR
            ['^', PREC.BITWISE_XOR],
            // [7] Bitwise AND
            ['&', PREC.BITWISE_AND],
            // [6] Bitwise shift operators
            ['<<', PREC.BITWISE_SHIFT],
            ['>>', PREC.BITWISE_SHIFT],
            // [5] Addition and subtraction
            ['+', PREC.PLUS],
            ['-', PREC.PLUS],
            // [4] Multiplication, division and modulo
            ['*', PREC.TIMES],
            ['/', PREC.TIMES],
            ['%', PREC.TIMES],
            // [3] Exponentiation
            ['**', PREC.EXP],
            ].map(([operator, precedence]) =>
                prec.left(precedence, seq(
                    field('left', $.expression),
                    field('operator', operator),
                    field('right', $.expression)
                ))
            )
        ),

        unary_expression: $ => choice(...[
                // [2] Unary minus
                ['-', PREC.PREFIX_UNARY],
                // [2] Unary operations
                ['delete', PREC.PREFIX_UNARY],
                // [2] Bitwise NOT
                ['!', PREC.PREFIX_UNARY],
                // [2] Bitwise NOT
                ['~', PREC.PREFIX_UNARY],
            ].map(([operator, precedence]) =>
                prec.left(precedence, seq(
                    field('operator', operator),
                    field('argument', $.expression)
                ))
        )),

        update_expression: $ => choice(
            prec.left(PREC.POSTFIX_UNARY, seq(
                field('argument', $.expression),
                field('operator', choice('++', '--'))
            )),
            prec.left(PREC.PREFIX_UNARY, seq(
                field('operator', choice('++', '--')),
                field('argument', $.expression)
            )),
        ),

        member_expression: $ => prec.dynamic(1, seq(
            field('object', choice(
                $.expression,
                $.identifier,
            )),
            '.',
            field('property', $.identifier)
        )),

        array_access: $ => seq(
            field('base', $.expression),
            '[',
            optional(field('index', $.expression)),
            ']'
        ),

        slice_access: $ => seq(
            field('base', $.expression),
            '[',
            optional(field('from', $.expression)),
            ':',
            optional(field('to', $.expression)),
            ']'
        ),

        struct_expression: $ => prec(2, seq(
            field("type", $.expression),
            "{",
            commaSep($.struct_field_assignment),
            "}"
        )),

        struct_field_assignment: $ => seq(
            field("name", $.identifier),
            ":",
            field("value", $.expression)
        ),


        parenthesized_expression: $ => prec(2, seq('(', $.expression, ')')),

        assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
            field('left', $.expression),
            '=',
            field('right', $.expression)
        )),

        augmented_assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
            field('left', $.expression),
            choice('+=', '-=', '*=', '/=', '%=', '^=', '&=', '|=', '>>=', '<<=',),
            field('right', $.expression)
        )),

        call_expression: $ => prec.right(PREC.CALL, choice(
            // Regular call without options
            seq(
                field("function", $.expression),
                $._call_arguments
            ),
            // Call with options (higher precedence to resolve conflict)
            prec(1, seq(
                field("function", $.expression),
                "{",
                commaSep1($.call_option),
                "}",
                $._call_arguments
            ))
        )),

        payable_conversion_expression: $ => seq('payable', $._call_arguments),
        type_name: $ => choice(
            $.primitive_type,
            $.user_defined_type,
            $._mapping,
            $._array_type,
            $._function_type,
        ),

        _array_type: $ => prec(1, seq($.type_name, '[', optional($.expression), ']')),

        _function_type: $ => prec.right(seq(
            'function',
            field("parameters", $._parameter_list),
            optional($.visibility),
            optional($.state_mutability),
            optional($._return_parameters),
        )),

        _parameter_list: $ => seq(
            '(', commaSep($.parameter), ')'
        ),

        parameter: $ =>  seq(
            field("type", $.type_name),
            optional(field("location", $._storage_location)),
            optional(field("name", $.identifier)),
        ),

        _storage_location: $ => choice(
            'memory',
            'storage',
            'calldata',
            'transient'
        ),

        user_defined_type: $ => $._identifier_path,

        _identifier_path: $ => prec.left(dotSep1( $.identifier)),

        _mapping: $ => seq(
            'mapping', '(',
            field("key_type", $._mapping_key),
            optional(field('key_identifier', $.identifier)),
            '=>',
            field("value_type", $.type_name),
            optional(field('value_identifier', $.identifier)),
            ')',
        ),

        primitive_type: $ => prec.left(choice(
            seq('address', optional('payable')),
            'bool',
            'string',
            'var',
            $._int,
            $._uint,
            $._bytes,
            $._fixed,
            $._ufixed,
        )),

        _int: $ => choice (
            'int', 'int8', 'int16', 'int24', 'int32', 'int40', 'int48', 'int56', 'int64', 'int72', 'int80', 'int88', 'int96', 'int104', 'int112', 'int120', 'int128', 'int136', 'int144', 'int152', 'int160', 'int168', 'int176', 'int184', 'int192', 'int200', 'int208', 'int216', 'int224', 'int232', 'int240', 'int248', 'int256'
        ),
        _uint: $ => choice (
            'uint', 'uint8', 'uint16', 'uint24', 'uint32', 'uint40', 'uint48', 'uint56', 'uint64', 'uint72', 'uint80', 'uint88', 'uint96', 'uint104', 'uint112', 'uint120', 'uint128', 'uint136', 'uint144', 'uint152', 'uint160', 'uint168', 'uint176', 'uint184', 'uint192', 'uint200', 'uint208', 'uint216', 'uint224', 'uint232', 'uint240', 'uint248', 'uint256'
        ),
        _bytes: $ => choice (
            'byte', 'bytes', 'bytes1', 'bytes2', 'bytes3', 'bytes4', 'bytes5', 'bytes6', 'bytes7', 'bytes8', 'bytes9', 'bytes10', 'bytes11', 'bytes12', 'bytes13', 'bytes14', 'bytes15', 'bytes16', 'bytes17', 'bytes18', 'bytes19', 'bytes20', 'bytes21', 'bytes22', 'bytes23', 'bytes24', 'bytes25', 'bytes26', 'bytes27', 'bytes28', 'bytes29', 'bytes30', 'bytes31', 'bytes32'
        ),

        _fixed: $ => choice (
            'fixed',
            /fixed([0-9]+)x([0-9]+)/
        ),
        _ufixed: $ => choice (
            'ufixed',
            /ufixed([0-9]+)x([0-9]+)/
        ),

        _semicolon: $ => ';',

        identifier: $ => /[a-zA-Z$_][a-zA-Z0-9$_]*/,

        number_literal: $ => seq(choice($._decimal_number, $._hex_number), optional($.number_unit)),
        _decimal_number: $ =>  choice(
            /(\d|_)+(\.(\d|_)+)?([eE](-)?(\d|_)+)?/,
            /\.(\d|_)+([eE](-)?(\d|_)+)?/,
        ),
        _hex_number: $ => prec(10, /0[xX]([a-fA-F0-9][a-fA-F0-9]?_?)+/),
        // _hex_number: $ => seq(/0[xX]/, optional(optionalDashSeparation($._hex_digit))),
        comment: $ => token(
            prec(PREC.COMMENT,
                choice(
                    seq('//', /([^\r\n])*/),
                    seq(
                        '/*',
                        /[^*]*\*+([^/*][^*]*\*+)*/,
                        '/'
                    )
                )
            )
        ),
    }
  }
);

function dotSep1(rule) {
    return seq(
        rule,
        repeat(
            seq(
                '.',
                rule
            )
        ),
    );
}

function dotSep(rule) {
    return optional(dotSep1(rule))
}

function commaSep1(rule) {
    return seq(
        rule,
        repeat(
            seq(
                ',',
                rule
            )
        ),
        optional(','),
    );
}

function commaSep(rule) {
    return optional(commaSep1(rule));
}

function optionalDashSeparation(rule) {
    return seq(
        rule,
        repeat(
            seq(
                optional('_'),
                rule
            )
        ),
    );
}
